# CPFA_Base_ARGoS

./: .gitignore  CMakeLists.txt  build.sh  project2.md
experiments/dcpfa_mvp/: CPFA_Baseline_Clustered_24r_256tags_10x10.xml  CPFA_Baseline_Powerlaw_24r_256tags_10x10.xml  CPFA_Baseline_Random_24r_256tags_10x10.xml  DCPFA_Clustered_24r_256tags_10x10.xml  DCPFA_Powerlaw_24r_256tags_10x10.xml  DCPFA_Random_24r_256tags_10x10.xml  DCPFA_visualization_short.xml
source/: CMakeLists.txt
source/DCPFA/: CMakeLists.txt  DCPFA_controller.cpp  DCPFA_controller.h  DCPFA_loop_functions.cpp  DCPFA_loop_functions.h  DCPFA_qt_user_functions.cpp  DCPFA_qt_user_functions.h  DecentralizedPheromone.cpp  DecentralizedPheromone.h  RobotPheromoneMemory.cpp  RobotPheromoneMemory.h
source/ga-mpi/: CMakeLists.txt
tools/dcpfa/: README.md  dcpfs_visualization.sh  official_experiments.csv  pheromone_memory_smoke_test.cpp  run_dcpfa_visualization.sh  run_mvp_trials.py  test_pheromone_memory.sh  validate_communication.py  validate_official_xmls.py
